better 'synthétique' modal

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -485,11 +485,11 @@ crossorigin=""/>
   
   <div class="collapse navbar-collapse" id="navbarForNaturelles">
   <ul id="ongletsnat" class="navbar-nav nav nav-pills nav-justified  mx-auto" role="tablist">
-    <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="true" class="nav-link" id="pills-tab1">Présentation Générale</a></li>
+    <li class="nav-item"><a href="#tab1info" data-toggle="pill" aria-controls="tab1info" aria-selected="false" class="nav-link" id="pills-tab1">Présentation Générale</a></li>
     <li class="nav-item"><a href="#tab2info" data-toggle="pill" aria-controls="tab2info" aria-selected="false" class="nav-link" id="pills-tab2">Botanique Origine Extraction</a></li>
     <li class="nav-item"><a href="#tab3info" data-toggle="pill" aria-controls="tab3info" aria-selected="false" class="nav-link" id="pills-tab3">Réglementation</a></li>
     <li class="nav-item"><a href="#tab4info" data-toggle="pill" aria-controls="tab4info" aria-selected="false" class="nav-link" id="pills-tab4">Autres Remarques</a></li>
-    <li class="nav-item"><a href="#tab6info" data-toggle="pill" aria-controls="tab6info" aria-selected="false" class="nav-link active" id="pills-tab6">Fournisseurs</a></li>
+    <li class="nav-item"><a href="#tab6info" data-toggle="pill" aria-controls="tab6info" aria-selected="true" class="nav-link active" id="pills-tab6">Fournisseurs</a></li>
   </ul>
   </div>
 </nav>
@@ -502,10 +502,8 @@ crossorigin=""/>
 <div class="tab-pane fade" id="tab1info" role="tabpanel" aria-labelledby="pills-tab1">
 <div class="container-fluid">
 <div class="row">
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent" >
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+<div class="col-xs-6 col-sm-6 col-lg-4  panelcontent" >
   
-<div id="modalbody-pict" class="imgmp"></div>
 <p class="item"><span><b>Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b>
 <span id="modalbody-tenue" class="textitem" ></span></span></p>
 
@@ -513,6 +511,9 @@ crossorigin=""/>
 <span id="modalbody-price" class="textitem"></span></span></p>
 
 <p class="item"><span><b>Composants principaux <sup class="fas fa-question-circle iconetab" title="Molécules majoritairement présentes dans la matière première. Les pourcentages donnés sont ici présents à titre indicatif et ne peuvent être généralisés à l'ensemble des chémotypes et des millésimes de la matière première. "></sup> :</b><span id="modalbody-componat" class="textitem2"></span></span></p>
+
+</div>
+<div class="col-xs-6 col-sm-6 col-lg-4  panelcontent">
 
 <p class="item"><span><b>N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup>:</b>
 <span id="modalbody-cas" class="textitem"></span></span></p>
@@ -524,7 +525,9 @@ crossorigin=""/>
 <span id="modalbody-stab" class="textitem"></span></span></p>
 
 </div>
-</div>
+
+<div id="modalbody-pict" class="imgmp  col-xs-12 col-sm-12 col-lg-4"></div>
+
 </div>
 </div>
 </div>
@@ -725,11 +728,11 @@ crossorigin=""/>
   
   <div class="collapse navbar-collapse" id="navbarForSynthetiques">
   <ul id="ongletssynth" class="navbar-nav nav nav-pills nav-justified  mx-auto" role="tablist">
-    <li class="nav-item"><a href="#tab12info" data-toggle="pill" aria-controls="tab12info" aria-selected="true" class="nav-link" id="pills-tab-synthetiques-1">Présentation Générale</a></li>
+    <li class="nav-item"><a href="#tab12info" data-toggle="pill" aria-controls="tab12info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-1">Présentation Générale</a></li>
     <li class="nav-item"><a href="#tab7info" data-toggle="pill" aria-controls="tab7info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-2">Obtention  Chimie</a></li>
     <li class="nav-item"><a href="#tab8info" data-toggle="pill" aria-controls="tab8info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-3">Réglementation</a></li>
     <li class="nav-item"><a href="#tab10info" data-toggle="pill" aria-controls="tab10info" aria-selected="false" class="nav-link" id="pills-tab-synthetiques-4">Autres Remarques</a></li>
-    <li class="nav-item"><a href="#tab11info" data-toggle="pill" aria-controls="tab11info" aria-selected="false" class="nav-link active" id="pills-tab-synthetiques-5">Fournisseurs</a></li>
+    <li class="nav-item"><a href="#tab11info" data-toggle="pill" aria-controls="tab11info" aria-selected="true" class="nav-link active" id="pills-tab-synthetiques-5">Fournisseurs</a></li>
   </ul>
   </div>
 </nav>
@@ -742,7 +745,7 @@ crossorigin=""/>
 <div class="tab-pane fade" id="tab12info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-1">
 <div class="container-fluid panelcontent">
 <div class="row">
-<div class="col-xs-6 col-sm-6 col-lg-4 blockdonnees">
+<div class="col-12 col-sm-12 col-lg-4 blockdonnees">
   <p class="item"><span><b>Tenue <sup class="fas fa-question-circle icone"  title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b><span id="modalbody-tenue1" class="textitem"></span></span></p>
   
   <p class="item"><span> <b>Prix <sup class="fas fa-question-circle icone" title="€ : 0 à 15 €/kg; €€ : 15 à 50 €/kg; €€€ : 50 à 200 €/kg; €€€€ : 200 à 1000 €/kg; €€€€€ : 1000 €/kg et plus. Le prix des matières première peut grandement évoluer selon différents facteurs qui leurs sont propres."></sup> : </b><span id="modalbody-price1" class="textitem"></span></span></p>
@@ -753,7 +756,7 @@ crossorigin=""/>
 
   <p class="item"><span><b>Formule Brute <sup class="fas fa-question-circle icone" title="Formule répertoriant les atomes composant la molécule étudiée."></sup> :</b><span id="modalbody-fbrute1" class="textitem"></span></span></p>
 </div>
-<div class="col-xs-6 col-sm-6 col-lg-4 blockdonnees">
+<div class="col-12 col-sm-12 col-lg-4 blockdonnees">
   <p class="item"><span><b>Densité <sup class="fas fa-question-circle icone" title="Donnée, sans unité, mettant en relation la masse pour un volume donné de matière première (d = 1,5 veut dire que 1 mL = 1,5 g)."></sup> :</b><span id="modalbody-densite1" class="textitem"></span></span></p>
   
   <p class="item"><span><b>Flash Point <sup class="fas fa-question-circle icone" title="Donne, en degrés, un indice sur la volatilité de la matière première. Il s'agit de la température à laquelle la matière première forme un mélange inflammable avec l'air en surface."></sup> :</b><span id="modalbody-fp1" class="textitem"></span></span></p>
@@ -764,7 +767,7 @@ crossorigin=""/>
   
   <p class="item"><span><b>Masse Molaire <sup class="fas fa-question-circle icone" title="Indice sur la taille de la molécule (et souvent sa volatilité), donné en g/mol."></sup> :</b><span id="modalbody-mmolaire1" class="textitem"></span></span></p>
 </div>
-<div id="modalbody-pict1" class="imgmp col-xs-12 col-sm-12 col-lg-4"></div>
+<div id="modalbody-pict1" class="imgmp col-12 col-sm-12 col-lg-4 order-first order-sm-first order-lg-last"></div>
 </div>
 </div>
 </div>
@@ -773,9 +776,7 @@ crossorigin=""/>
 <div class="tab-pane fade" id="tab7info" role="tabpanel" aria-labelledby="pills-tab-synthetiques-2">
 <div class="container-fluid">
 <div class="row">
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-<div id="modalbody-pict1A" class="imgmp"></div>
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 panelcontent">
 <p class="item"><span class=decouverte><b>Découverte <sup class="fas fa-question-circle iconetab"  title="Date, lieu et/ou contexte de la découverte de la matière première."></sup> :</b><span id="modalbody-decouverte1" class="textitem"></span></span></p>
 
 <p class="item"><span class=synthèse><b>Voies de synthèse <sup class="fas fa-question-circle iconetab"  title="Réactions successives permettant d'obtenir la matière première par voie synthétique."></sup> :</b><span id="modalbody-synthèse" class="textitem"></span></span></p>
@@ -786,7 +787,9 @@ crossorigin=""/>
 
 <p class="item"><span class=isomerie><b>Présence dans la nature <sup class="fas fa-question-circle iconetab"  title="Matières premières naturelles dans lesquels la molécule peut être trouvée."></sup> :</b><span id="modalbody-présencenat" class="textitem"></span></span></p>
 </div>
-</div>
+
+<div id="modalbody-pict1A" class="imgmp  col-12 col-sm-12 col-md-12 col-lg-4  order-first order-sm-first order-lg-last"></div>
+
 </div>
 </div>
 </div>
