--- a/html/_/index.html
+++ b/html/_/index.html
@@ -502,7 +502,7 @@ crossorigin=""/>
 <div class="tab-pane fade" id="tab1info" role="tabpanel" aria-labelledby="pills-tab1">
 <div class="container-fluid">
 <div class="row">
-<div class="col-xs-6 col-sm-6 col-lg-4  panelcontent" >
+<div class="col-xs-12 col-sm-12 col-lg-4  panelcontent" >
   
 <p class="item"><span><b>Tenue <sup class="fas fa-question-circle iconetab" title="Indice sur la ténacité de la matière première (Tête : quelques minutes; Coeur : quelques heures; Fond : jusqu'à plusieurs jours)."></sup> :</b>
 <span id="modalbody-tenue" class="textitem" ></span></span></p>
@@ -513,7 +513,7 @@ crossorigin=""/>
 <p class="item"><span><b>Composants principaux <sup class="fas fa-question-circle iconetab" title="Molécules majoritairement présentes dans la matière première. Les pourcentages donnés sont ici présents à titre indicatif et ne peuvent être généralisés à l'ensemble des chémotypes et des millésimes de la matière première. "></sup> :</b><span id="modalbody-componat" class="textitem2"></span></span></p>
 
 </div>
-<div class="col-xs-6 col-sm-6 col-lg-4  panelcontent">
+<div class="col-xs-12 col-sm-12 col-lg-4  panelcontent">
 
 <p class="item"><span><b>N° CAS <sup class="fas fa-question-circle iconetab" title="Numéro d'identification universel de la matière première."></sup>:</b>
 <span id="modalbody-cas" class="textitem"></span></span></p>
@@ -526,7 +526,7 @@ crossorigin=""/>
 
 </div>
 
-<div id="modalbody-pict" class="imgmp  col-xs-12 col-sm-12 col-lg-4"></div>
+<div id="modalbody-pict" class="imgmp  col-xs-12 col-sm-12 col-lg-4  order-first order-sm-first order-lg-last"></div>
 
 </div>
 </div>
@@ -536,10 +536,8 @@ crossorigin=""/>
 <div class="tab-pane fade" id="tab2info"  role="tabpanel" aria-labelledby="pills-tab2">
 <div class="container-fluid">
 <div class="row">
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
-<div class="col-lg-12">
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-8 panelcontent">
   
-<div id="modalbody-pictA" class="imgmp"></div>
 <p class="item"><span><b>Nom botanique <sup class="fas fa-question-circle iconetab" title="Nom de la plante ou de l'animal selon le Code International de Nomenclature Botanique."></sup> :</b><span id="modalbody-nbota" class="textitem3" ></span></span></p>
 
 <p class="item"><span><b>Botanique <sup class="fas fa-question-circle iconetab" title="Famille et/ou genre botanique à laquelle la matière première est ratachée."></sup> :</b><span id="modalbody-bota"  class="textitem"></span></span></p>
@@ -551,9 +549,10 @@ crossorigin=""/>
 <p class="item"><span><b>Influence et répartition des chémotypes <sup class="fas fa-question-circle iconetab" title="Caractéristiques des autres variétés et/ou espèces de la plante étudiée."></sup> :</b><span id="modalbody-chemotype" class="textitem"></span></span></p>
 
 <p class="item"><span><b>Médecine alternative <sup class="fas fa-question-circle iconetab" title="Usages en aromathérapie, phytothérapie ou olfactothérapie."></sup> :</b><span id="modalbody-medecine" class="textitem"></span></span></p>
+</div>
 
-</div>
-</div>
+<div id="modalbody-pictA" class="imgmp  col-xs-12 col-sm-12 col-md-12 col-lg-4  order-first order-sm-first order-lg-last"></div>
+
 </div>
 </div>
 </div>
