--- a/html/_/index.html
+++ b/html/_/index.html
@@ -87,22 +87,22 @@ crossorigin=""/>
   </form>
 </div>
 
-<div class="col-2 col-md-12 d-none d-md-block  my-footer">
+<div class="col-2 col-md-12 d-none d-md-block  my-footer  pl-0">
 <div class="container-fluid  text-center">
 <div class="row" id="menuRow">
 
 	<!--<div class="col-12"><button class="btn btn text-underline" type="button" data-toggle="modal" data-target="#lesNouveautes">Découvrez les nouveautés !</button></div>-->
 <div class="col-12  p-0"><button class="btn  text-underline font-weight-bold  mt-3 mb-3 px-0" type="button" data-toggle="modal" data-target="#lesCollaborateurs">Ils nous soutiennent</button></div>
-<div class="col-12 col-md-6"><button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesSources">Sources</button></div>
-<div class="col-12 col-md-6"><button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesContacts">Contacts</button></div>
+<div class="col-12 col-md-6 p-0"><button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesSources">Sources</button></div>
+<div class="col-12 col-md-6 p-0"><button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesContacts">Contacts</button></div>
 <div class="col-12 col-md-6 p-0"><button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesMentionsLegales">Mentions Légales</button></div>
 
-<div class="col-12 col-md-6">
+<div class="col-12 col-md-6 p-0 pl-2">
 <div class="container-fluid">
 <div class="row">
-<div class="col-12 p-1"><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/" target="_blank"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid max-height-30px" /></a></div>
-<div class="col-6 p-1"><a class="instagram_button" href="https://www.instagram.com/scentree_/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-30px" /></a></div>
-<div class="col-6 p-1"><a class="twitter_button" href="https://www.twitter.com/Scentree1" target="_blank"><img src="../img/Twitter_Logo_Blue.png" alt="vers notre Twitter" class="img-fluid max-height-30px" /></a></div>
+<div class="col-4 p-0"><a class="linkedIn_button" href="https://www.linkedin.com/company/scentree/" target="_blank"><img src="../img/LI-In-Bug.png" alt="vers notre linkedIn" class="img-fluid max-height-25px" /></a></div>
+<div class="col-4 p-0"><a class="instagram_button" href="https://www.instagram.com/scentree_/" target="_blank"><img src="../img/Instagram_AppIcon_Aug2017.png" alt="vers notre Instagram" class="img-fluid max-height-25px" /></a></div>
+<div class="col-4 p-0"><a class="twitter_button" href="https://www.twitter.com/Scentree1" target="_blank"><img src="../img/Twitter_Logo_Blue.png" alt="vers notre Twitter" class="img-fluid max-height-25px" /></a></div>
 </div>
 </div>
 </div>
