--- a/html/_/index.html
+++ b/html/_/index.html
@@ -245,7 +245,7 @@ crossorigin=""/>
   <p><b>Ouvrages : </b>
   <uL>			
     <li>Horst Surburg, Johannes Panten, “Common Fragrance and Flavor Materials”, 5th edition, completely revised and enlarged edition 2006. 325 pages. ISBN: 3-527-31315-X.</li>
-    <li>Nez Edition, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, 2016-2019.</li>
+    <li>Nez Edition, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
     <li>Michael and Irene Ash, Synapse Information Resources, Inc., “Handbook of Flavors and Fragrances”, 2006, 1790 pages. ISBN: 1-934764-28-0</li>
     <li>Charles Sell Quest International, Ashford, Kent, “The Chemistry of Fragrances, From Perfumer to Consumer 2nd Edition”, 2006, 348 pages. ISBN-10: 0-85404-824-3</li>
     <li>David H. Pybus, Charles Sell, Sales and Promotion Department, The Royal Society of Chemistry, “The Chemistry of Fragrances”, 1999, 297 pages. ISBN 0-85404-528-7</li>
@@ -312,32 +312,35 @@ crossorigin=""/>
   
   <p><b><i>Professionnels ayant participé à l’incrémentation de la base de données ScenTree</i></b> </p>
   <uL>
-    <li>Sabine RAYNAL <i class="profession">(Enseignante à l’ISIPCA)</i></li>
-    <li>Jean-Michel DURIEZ <i class="profession">(Parfumeur Créateur – Parfums Jean-Michel Duriez Paris)</i></li>
-    <li>Morgan DHORME <i class="profession">(Enseignant à l’ISIPCA – Parfumeur Créateur – Chidho Cosmétiques)</i></li>
-    <li>Juliette FALIU <i class="profession">(Consultante/Rédactrice – Le Nez Bavard)</i></li>
-    <li>Axel MORVAN <i class="profession">(Parfumeur Analyste)</i></li>
-    <li>Céline VILLEPREUX <i class="profession">(Experte Matières Premières – Firmenich)</i></li>
-    <li>Marc ASTORRI <i class="profession">(Apprenti Parfumeur – Givaudan)</i></li>
-    <li>Stéphane PROIA <i class="profession">(Evaluateur Junior)</i></li>
+    <li>ASTORRI Marc<i class="profession">(Apprenti Parfumeur)</i></li>
+    <li>CERVI Yohan<i class="profession">(Directeur de la création chez MAELSTROM Parfumeurs)</i></li>
+    <li>DHORME Morgan<i class="profession">(Enseignant à l’ISIPCA – Parfumeur Créateur – Chidho Cosmétiques)</i></li>
+    <li>DURIEZ Jean-Michel<i class="profession">(Parfumeur Créateur – Parfums Jean-Michel Duriez Paris)</i></li>
+    <li>FALIU Juliette<i class="profession">(Consultante/Rédactrice – Le Nez Bavard)</i></li>
+    <li>MORVAN Axel<i class="profession">(Parfumeur Analyste)</i></li>
+    <li>PROIA Stéphane<i class="profession">(Evaluateur Junior)</i></li>
+    <li>RAYNAL Sabine<i class="profession">(Enseignante à l’ISIPCA)</i></li>
+    <li>REVILLARD Patrice<i class="profession">(Co-fondateur et Parfumeur chez MAELSTROM Parfumeurs)</i></li>
+    <li>VILLEPREUX Céline<i class="profession">(Experte Matières Premières – Firmenich)</i></li>
   </uL>
   
   <p><b><i>Développement informatique </i></b> </p>
   <uL>
-    <li>Julien JACQUELINET</li>
-    <li>Damien DE VIENNE</li>
-    <li>Maxime BAUD</li>
+    <li>BAUD Maxime</li>
+    <li>JACQUELINET Julien </li>
+    <li>DE VIENNE Damien</li>
+    
   </uL>
   
   <p><b><i>Responsable mentions légales et juridiques</i></b> </p>
   <uL>
-    <li>Marie VASKOU</li>
+    <li>VASKOU Marie</li>
   </uL>
   
   <p><b><i>Graphismes, visuels et <a href="#Vidéo" data-toggle="modal" data-dismiss="modal">vidéo</a></i></b> </p>
   <uL>
+    <li>ERCOLANELLI Clara (Logo)</li>
     <li>SHOGUN SHOOTER (Vidéo)</li>
-    <li>Clara ERCOLANELLI (Logo)</li>
   </uL>
 </div>
 
