adding text to the IFRA tables

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -884,6 +884,9 @@ crossorigin=""/>
       <td><span id="modalbody-noskin"></span> %</td>
     </tr>
   </table></p>
+  <p class="text-size-13px text-center text-my-grey">Scentree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur. </p>
+  <p class="text-size-13px">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></p>
+  <p class="text-size-13px">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a href="#">ici</a></p>
 </div>
 <p class="item"><span class="allergenes"><b>Allergènes <sup class="fas fa-question-circle iconetab" title="Il existe 26 allergènes en parfumerie. Leur utilisation est limitée à 10 ppm dans le produit fini pour les produits non rincés (eaux de toilette par exemple), contre 100 ppm pour les produits rincés (gels douche par exemple). Une réaction allergique à un allergène de parfumerie et cosmétiques n'apparaît que pour 1 à 3% de la population européenne (source : CSSC). Il est donc rare d'être allergique à l'une de ces substances. Quoi qu'il en soit, les allergènes ont une utilisation limitée dans les produits parfumés, pour éviter toute réaction à ces produits."></sup> :</b><span id="modalbody-allergenes1" class="textitem"></span></span></p>
 
