upgraded the 'réglementation' pane for the 'botanique' modal

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -564,20 +564,21 @@ crossorigin=""/>
 <div class="tab-pane fade" id="tab3info"   role="tabpanel" aria-labelledby="pills-tab3">
 <div class="container-fluid"> 
 <div class="row">
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 panelcontent">
+<div class="col-12">
 
-  <p class="item"><span><b>IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b><span id="modalbody-ifra" class="textitem"></span></span></p>
+  <p><span><b>IFRA <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) recommande des utilisations maximales pour certaines matières premières dans leur produit fini. L'avis donné par cette association possède une grande valeur dans le milieu du parfum. Respecter les normes IFRA est gage de qualité et de sécurité à l'emploi du parfum."></sup> :</b><span id="modalbody-ifra" class="textitem"></span></span></p>
   
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 blockifra1">
-<div class="col-xs-10 col-sm-10 col-md-10 col-lg-10">
+<div class="container-fluid">
+<div class="row">
+<div class="col-12">
+<div class="blockifra1">
   <p class="amendment"><span><b>Amendement <sup class="fas fa-question-circle iconetab" title="Numéro du premier amendement dans lequel l'ingrédient à été ajouté. A ce jour, nous en sommes au 49ème. "></sup> :</b><span id="modalbody-amendment" class="textitem"></span></span></p>
   <br>
   <p class="commentaires"><span><b>Commentaires <sup class="fas fa-question-circle iconetab" title="L'IFRA (International Fragrance Association) fourni un certain nombre de recommandations ou de spécifications justifiants les restrictions des ingrédients. Les mentions suivantes sont valables pour une utilisation à forte dose de la matière première, ou en cas de sensibilité particulièrement élevée à cette matière première. Son utilisation en parfumerie étant restreinte, ces risques sont évités dans le cas des parfums."></sup> :</b><span id="modalbody-commentifra" class="textitem"></span></span></p>
 </div>
-</div>
 
-<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 blocktable">
-  <p><table class="col-xs-12 col-sm-12 col-md-12 col-lg-12 table1">
+<div class="blocktable">
+  <div class="table-responsive text-center"><table class="table1">
     <!-- TITRE DU TABLEAU-->
     <caption class="caption"> Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</caption> 
     <!-- EN-TETE DU TABLEAU-->
@@ -608,9 +609,9 @@ crossorigin=""/>
       <td><span id="modalbody-cat10"></span> %</td>
       <td><span id="modalbody-cat11"></span></td>
     </tr>
-  </table></p>
+  </table>
   
-  <p><table class="col-xs-12 col-sm-12 col-md-12 col-lg-12 table2">
+  <table class="table2">
     <!-- TITRE DU TABLEAU-->
     <caption class="caption"> Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</caption> 
     <!-- EN-TETE DU TABLEAU-->
@@ -628,9 +629,9 @@ crossorigin=""/>
       <td>X</td>
       <td>X</td>
     </tr>
-  </table></p>
+  </table>
   
-  <p><table class="col-xs-12 col-sm-12 col-md-12 col-lg-12 table3">
+  <table class="table3">
     <!-- TITRE DU TABLEAU-->
     <caption class="caption">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</caption> 
     <!-- EN-TETE DU TABLEAU-->
@@ -651,12 +652,13 @@ crossorigin=""/>
       <td>%</td>
       <td>%</td>
     </tr>
-  </table></p>
+  </table></div>
   <p class="logoifra text-size-13px text-center text-my-grey">Scentree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur. </p>
-  <div class="col-lg-10">
   <p class="logoifra text-size-13px">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></p>
   <p class="logoifra text-size-13px">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></p>
-  </div>
+</div>
+</div>
+</div>
 </div>
 
 <p class="item"><span><b>Allergènes <sup class="fas fa-question-circle iconetab" title="Il existe 26 allergènes en parfumerie. Leur utilisation est limitée à 10 ppm dans le produit fini pour les produits non rincés (eaux de toilette par exemple), contre 100 ppm pour les produits rincés (gels douche par exemple). Une réaction allergique à un allergène de parfumerie et cosmétiques n'apparaît que pour 1 à 3% de la population européenne (source : CSSC). Il est donc rare d'être allergique à l'une de ces substances. Quoi qu'il en soit, les allergènes ont une utilisation limitée dans les produits parfumés, pour éviter toute réaction à ces produits."></sup> :</b><span id="modalbody-allergenes" class="textitem"></span></span></p>
