--- a/html/_/index.html
+++ b/html/_/index.html
@@ -653,9 +653,9 @@ crossorigin=""/>
       <td>%</td>
     </tr>
   </table></div>
-  <p class="logoifra text-size-13px text-center text-my-grey">Scentree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur. </p>
-  <p class="logoifra text-size-13px">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></p>
-  <p class="logoifra text-size-13px">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></p>
+  <p class="logoifra text-size-11px text-center text-my-grey">Scentree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur. </p>
+  <p class="logoifra text-size-11px">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></p>
+  <p class="logoifra text-size-11px">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></p>
 </div>
 </div>
 </div>
@@ -892,9 +892,9 @@ crossorigin=""/>
       <td><span id="modalbody-noskin"></span> %</td>
     </tr>
   </table></div>
-  <p class="logoifra text-size-13px text-center text-my-grey">Scentree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur. </p>
-  <p class="logoifra text-size-13px">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></p>
-  <p class="logoifra text-size-13px">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></p>
+  <p class="logoifra text-size-11px text-center text-my-grey">Scentree engage sa pleine responsabilité dans la véracité des données fournies ici, L’IFRA ne saurait donc être responsable en cas d'erreur. </p>
+  <p class="logoifra text-size-11px">Pour en savoir plus sur les standards de l'IFRA : <a href="https://ifrafragrance.org/self-regulation/understanding-the-standards" target="_blank">https://ifrafragrance.org/self-regulation/understanding-the-standards</a></p>
+  <p class="logoifra text-size-11px">Pour connaitre les spécificités de chaque catégorie et les ingrédients interdits par l'IFRA, cliquez <a role="button" data-toggle="modal" data-target="#ifra_modal" href="#">ici</a></p>
 </div>
 </div>
 </div>
@@ -1162,6 +1162,29 @@ crossorigin=""/>
 </div>
 </div>
 </div>
+
+
+
+<!--MODAL IFRA -->
+<div class="modal" tabindex="-1" role="dialog" id="ifra_modal">
+<div class="modal-dialog modal-lg" role="document">
+<div class="modal-content">
+
+<div class="modal-header d-block">
+  <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <h4 class="text-center  modal-title modal-title1">IFRA</h4>
+</div>
+
+<div class="modal-body text-size-14px text-justify scrollbar-inside">
+
+	<p>Lorem Ipsum amel jz eporzepo epzo ktpozejtpez,t lkznt mlkzeht  jzhtizjrth rjztkj zretkj mzhto azoitzeljbsqdkjbfklsjdfbuo rhoizkjdbkj zqb lqzh zf sbfkj sd, eoihzeoifh fkljf zklhfoze flqjfhaeopoezohiqsbgjksdgn ldshosfdghsg lskfnjk fsglksdqg lsqns qklnqsdlkfjslk nqsknfsdlkjf mf nslknflsdn mlsdq nqsdlnglsdkbghjskbilqdsguze, ioheoiuhezoheozinze. Thabzfjeboeizhlknf jzehf oez lkeznlkdnfkjdbfaieooemfizhezlif zkjze ez zeklfzenkl  hfjhzq flkezfn lkf nlkdsnflksdnf lksdqnfklqsnfl kzrmglqsjkbfsd qz. </p>
+
+</div>
+
+</div>
+</div>
+</div>
+
 
 
 
