added the very first partner git add    _/index.html

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -309,8 +309,11 @@ crossorigin=""/>
 <div class="modal-body text-size-14px text-justify scrollbar-inside">
   <p> Le projet <b><i>ScenTree</i></b> a été imaginé et conçu par deux étudiants du master MSc de l’ISIPCA, Maxime BAUD et Thomas ESPINASSE. Initialement imaginé afin de réunir et d’harmoniser nos connaissances sur les matières premières, <i>ScenTree</i> s’est rapidement transformé en ce que vous voyez aujourd’hui. Après 2 ans de développement du logiciel et de la base de données, nous sommes fiers de vous présenter notre travail.  </p>
   <p> Ce projet n’aurait jamais pu voir le jour sans le soutien particulier de nombreuses personnes. Nous tenions à les remercier ici : </p>
-  
-  <p><b><i>Professionnels ayant participé à l’incrémentation de la base de données ScenTree</i></b> </p>
+ 
+<p><b><i class="text-underline">Sociétés partenaires de ScenTree : </i></b> </p>
+<button class="btn" type="button" data-toggle="modal" data-target="#partenaireCinquiemeSens"><img class="img-fluid  boutonclickable  max-height-200px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></button>
+
+  <p><b><i class="text-underline">Professionnels ayant participé à l’incrémentation de la base de données ScenTree</i></b> </p>
   <uL>
     <li>ASTORRI Marc<i class="profession">(Apprenti Parfumeur)</i></li>
     <li>CERVI Yohan<i class="profession">(Directeur de la création chez MAELSTROM Parfumeurs)</i></li>
@@ -324,7 +327,7 @@ crossorigin=""/>
     <li>VILLEPREUX Céline<i class="profession">(Experte Matières Premières – Firmenich)</i></li>
   </uL>
   
-  <p><b><i>Développement informatique </i></b> </p>
+  <p><b><i class="text-underline">Développement informatique </i></b> </p>
   <uL>
     <li>BAUD Maxime</li>
     <li>JACQUELINET Julien </li>
@@ -332,12 +335,12 @@ crossorigin=""/>
     
   </uL>
   
-  <p><b><i>Responsable mentions légales et juridiques</i></b> </p>
+  <p><b><i class="text-underline">Responsable mentions légales et juridiques</i></b> </p>
   <uL>
     <li>VASKOU Marie</li>
   </uL>
   
-  <p><b><i>Graphismes, visuels et <a href="#Vidéo" data-toggle="modal" data-dismiss="modal">vidéo</a></i></b> </p>
+  <p><b><i class="text-underline">Graphismes, visuels et <a href="#Vidéo" data-toggle="modal" data-dismiss="modal">vidéo</a></i></b> </p>
   <uL>
     <li>ERCOLANELLI Clara (Logo)</li>
     <li>SHOGUN SHOOTER (Vidéo)</li>
@@ -1703,6 +1706,29 @@ Limit content of polynuclear aromatic hydrocarbons (PAH) resulting from the use 
 </div>
 </div>
 </div>
+
+
+<!--MODAL CONTACT -->
+
+<div class="modal" tabindex="-1" role="dialog" id="partenaireCinquiemeSens">
+<div class="modal-dialog modal-lg" role="document">
+<div class="modal-content">
+
+<div class="modal-header d-block">
+  <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  <h4 class="text-center  modal-title modal-title1">Cinquième Sens Coworking : Work, Smell & Formulate</h4>
+</div>
+
+<div class="modal-body text-size-14px text-justify scrollbar-inside">
+	<p class="text-center"><img class="img-fluid  boutonclickable  max-height-200px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></p>
+	<p>A l’écoute de son temps, au plus près des acteurs, et des passionnés de la belle parfumerie, Cinquième Sens met tout son savoir-faire et son expérience pour vous offrir un lieu innovant, unique et accessible. Soient 80m2 d’espace, au pied de la tour Eiffel, comprenant trois niveaux d’accès en toute flexibilité : Olfawork, Olfaction et Olfalab. </p>
+	<p>Pour en savoir plus sur Cinquième sens et son espace de co-working, rendez-vous sur leur <a href="https://www.cinquiemesens.com/coworking/" target="_BLANK">site</a></p>
+</div>
+
+</div>
+</div>
+</div>
+
 
 
 
