modal 'Ils nous soutiennent' -> two columns

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -307,12 +307,17 @@ crossorigin=""/>
 </div>
 
 <div class="modal-body text-size-14px text-justify scrollbar-inside">
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-12">
   <p> Le projet <b><i>ScenTree</i></b> a été imaginé et conçu par deux étudiants du master MSc de l’ISIPCA, Maxime BAUD et Thomas ESPINASSE. Initialement imaginé afin de réunir et d’harmoniser nos connaissances sur les matières premières, <i>ScenTree</i> s’est rapidement transformé en ce que vous voyez aujourd’hui. Après 2 ans de développement du logiciel et de la base de données, nous sommes fiers de vous présenter notre travail.  </p>
   <p> Ce projet n’aurait jamais pu voir le jour sans le soutien particulier de nombreuses personnes. Nous tenions à les remercier ici : </p>
- 
+			</div>
+			<div class="col-12 col-lg-6">
 <p><b><i class="text-underline">Sociétés partenaires de ScenTree : </i></b> </p>
 <button class="btn" type="button" data-toggle="modal" data-target="#partenaireCinquiemeSens"><img class="img-fluid  boutonclickable  max-height-200px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></button>
-
+			</div>
+			<div class="col-12 col-lg-6">
   <p><b><i class="text-underline">Professionnels ayant participé à l’incrémentation de la base de données ScenTree</i></b> </p>
   <uL>
     <li>ASTORRI Marc<i class="profession">(Apprenti Parfumeur)</i></li>
@@ -346,6 +351,8 @@ crossorigin=""/>
     <li>SHOGUN SHOOTER (Vidéo)</li>
   </uL>
 </div>
+
+		</div>
 
 </div>
 </div>
