better outfit for MP header ('naturelles' only for the moment)

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -353,6 +353,8 @@ crossorigin=""/>
 </div>
 
 		</div>
+	</div>
+</div>
 
 </div>
 </div>
@@ -478,13 +480,13 @@ crossorigin=""/>
   
   <!--modal header-->
 <div class="modal-header d-block">
-<div>
   <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <span id="modaltitle" class="modal-title"></span>
-  <span id="modalheader-type" class="float-right modalheader-type2"></span>
+	<div class="container-fluid">
+<div class="row text-center">
+  <div id="modaltitle" class="modal-title  col-12 col-md-6"></div>
+  <div id="modalheader-type" class="float-right modalheader-type2  col-12 col-md-6"></div>
+  <div id="modaltitle-fili" class="col-12  Filiation"></div>
 </div>
-<div class="text-center">
-  <span id="modaltitle-fili" class="Filiation"></span>
 </div>
 </div>
 
