better outfit for MP header ('naturelles' only for the moment)

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -479,15 +479,19 @@ crossorigin=""/>
 <div class="modal-content">
   
   <!--modal header-->
-<div class="modal-header d-block">
-  <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-	<div class="container-fluid">
+<div class="modal-header">
+	<div class="container-fluid  d-inline-block">
 <div class="row text-center">
-  <div id="modaltitle" class="modal-title  col-12 col-md-6"></div>
-  <div id="modalheader-type" class="float-right modalheader-type2  col-12 col-md-6"></div>
-  <div id="modaltitle-fili" class="col-12  Filiation"></div>
+  <div class="col-12 col-md-6">
+    <span id="modaltitle" class="modal-title font-weight-bold text-size-20px"></span>
+  </div>
+  <div class="col-12 col-md-6">
+  <span id="modalheader-type" class="modalheader-type2 text-size-18px font-italic"></span>
+  </div>
+  <div id="modaltitle-fili" class="col-12  Filiation text-size-16px"></div>
 </div>
 </div>
+<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 </div>
 
 <div class="modal-body text-size-14px text-justify scrollbar-inside"> 
@@ -727,7 +731,7 @@ crossorigin=""/>
 <div class="modal-header d-block">
 <div>
   <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <span id="modaltitle1" class="modal-title"></span>
+  <span id="modaltitle1" class="modal-title font-weight-bold"></span>
   <span id="modalheader-type1" class="float-right modalheader-type2"></span>
 </div>
 <div class="text-center">
