better outfit for MP header : md is a breakpoint ('naturelles' only for the moment)

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -481,14 +481,14 @@ crossorigin=""/>
   <!--modal header-->
 <div class="modal-header">
 	<div class="container-fluid  d-inline-block">
-<div class="row text-center">
-  <div class="col-12 col-md-6">
-    <span id="modaltitle" class="modal-title font-weight-bold text-size-20px"></span>
+<div class="row">
+  <div class="col-12 col-md-6  font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
+    <span id="modaltitle" class="modal-title "></span>
   </div>
-  <div class="col-12 col-md-6">
-  <span id="modalheader-type" class="modalheader-type2 text-size-18px font-italic"></span>
+  <div class="col-12 col-md-6  text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
+  <span id="modalheader-type" class="modalheader-type2"></span>
   </div>
-  <div id="modaltitle-fili" class="col-12  Filiation text-size-16px"></div>
+  <div id="modaltitle-fili" class="col-12  Filiation text-size-16px text-center"></div>
 </div>
 </div>
 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
