--- a/html/_/index.html
+++ b/html/_/index.html
@@ -78,7 +78,7 @@ crossorigin=""/>
 	<button class="btn mt-4" type="button" data-toggle="modal" data-target="#decouvrirScenTree"><img id="logo-image" class="img-fluid logomenu boutonclickable" src="../img/logob.png" alt="le logo de Scentree"></button>
 </div>
 
-<div class="text-underline font-weight-bold text-size-1-5vw  mt-5  col-md-12  d-none d-sm-none d-md-block">Trouver une matière première&nbsp;:&nbsp;</div>
+<div class="text-underline font-weight-bold text-size-1-5vw  mt-5 mb-2  col-md-12  d-none d-sm-none d-md-block">Trouver une matière première&nbsp;:&nbsp;</div>
 
 <div class="col-2 offset-5 offset-md-0 col-md-12">
   <!--Recherche -->
@@ -90,9 +90,8 @@ crossorigin=""/>
 <div class="col-2 col-md-12 d-none d-md-block  my-footer  pl-0">
 <div class="container-fluid  text-center">
 <div class="row" id="menuRow">
-
 	<!--<div class="col-12"><button class="btn btn text-underline" type="button" data-toggle="modal" data-target="#lesNouveautes">Découvrez les nouveautés !</button></div>-->
-<div class="col-12  p-0"><button class="btn  text-underline font-weight-bold  mt-3 mb-3 px-0  text-in-color-brown text-in-size-16px" type="button" data-toggle="modal" data-target="#lesCollaborateurs">Ils nous soutiennent</button></div>
+<div class="col-12  p-0"><button class="btn  text-underline font-weight-bold  mt-3 mb-5 px-0  text-in-color-brown text-in-size-16px" type="button" data-toggle="modal" data-target="#lesCollaborateurs">Ils nous soutiennent</button></div>
 <div class="col-12 col-md-6 p-0"><button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesSources">Sources</button></div>
 <div class="col-12 col-md-6 p-0"><button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesContacts">Contacts</button></div>
 <div class="col-12 col-md-6 p-0"><button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesMentionsLegales">Mentions Légales</button></div>
@@ -315,7 +314,7 @@ crossorigin=""/>
 			</div>
 			<div class="col-12 col-lg-6">
 <p><b><i class="text-underline">Sociétés partenaires de ScenTree : </i></b> </p>
-<button class="btn" type="button" data-toggle="modal" data-target="#partenaireCinquiemeSens"><img class="img-fluid  boutonclickable  max-height-200px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></button>
+<button class="btn" type="button" data-toggle="modal" data-target="#partenaireCinquiemeSens"><img class="img-fluid  boutonclickable  max-height-100px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></button>
 			</div>
 			<div class="col-12 col-lg-6">
   <p><b><i class="text-underline">Professionnels ayant participé à l’incrémentation de la base de données ScenTree</i></b> </p>
@@ -1183,7 +1182,7 @@ crossorigin=""/>
 
 <!--MODAL IFRA -->
 <div class="modal" tabindex="-1" role="dialog" id="ifra_modal">
-<div class="modal-dialog modal-lg" role="document">
+<div class="modal-dialog modal-xl" role="document">
 <div class="modal-content">
 
 <div class="modal-header d-block">
@@ -1721,10 +1720,10 @@ Limit content of polynuclear aromatic hydrocarbons (PAH) resulting from the use 
 </div>
 
 
-<!--MODAL CONTACT -->
+<!-- MODAL cinquième sens -->
 
 <div class="modal" tabindex="-1" role="dialog" id="partenaireCinquiemeSens">
-<div class="modal-dialog modal-lg" role="document">
+<div class="modal-dialog modal-xl" role="document">
 <div class="modal-content">
 
 <div class="modal-header d-block">
