--- a/html/_/index.html
+++ b/html/_/index.html
@@ -89,7 +89,7 @@ crossorigin=""/>
 
 <div class="col-2 col-md-12 d-none d-md-block  my-footer  pl-0">
 <div class="container-fluid  text-center">
-<div class="row" id="menuRow">
+<div class="row">
 	<!--<div class="col-12"><button class="btn btn text-underline" type="button" data-toggle="modal" data-target="#lesNouveautes">Découvrez les nouveautés !</button></div>-->
 <div class="col-12  p-0"><button class="btn  text-underline font-weight-bold  mt-3 mb-5 px-0  text-in-color-brown text-in-size-16px" type="button" data-toggle="modal" data-target="#lesCollaborateurs">Ils nous soutiennent</button></div>
 <div class="col-12 col-md-6 p-0"><button class="btn btn-sm  text-underline" type="button" data-toggle="modal" data-target="#lesSources">Sources</button></div>
@@ -108,7 +108,7 @@ crossorigin=""/>
 
 </div>
 
-<div id="copyright" class="row  d-none d-sm-none d-md-block">
+<div class="copyright m-top-15-percent" class="row  d-none d-sm-none d-md-block">
   <sup>©</sup> Copyright 2019 |  ScenTree  | All Rights Reserved |
 </div>
 
@@ -183,6 +183,8 @@ crossorigin=""/>
 <p class="license"><i>Pour tout complément d'information, question ou remarque, merci de rentrer en contact avec <a href="https://www.linkedin.com/in/maxime-baud-915a79130/" target ="_BLANK">Maxime BAUD </a> ou <a href= "https://www.linkedin.com/in/thomas-espinasse-1aa576103/" target ="_BLANK"> Thomas ESPINASSE </a> </i></p>
 
 <p class="license"><i><a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-nc/4.0/80x15.png" /></a><br />ScenTree project is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>.</i><br></p>  
+
+<p class="copyright"><sup>©</sup> Copyright 2019 |  ScenTree  | All Rights Reserved |</p>
 
 </div>
 
