non-breakable space and hyphen for the longest word in IFRA table, to have a better width for the 'Ingrédient' column

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1246,58 +1246,6 @@ crossorigin=""/>
         </tr>
 </table></div>
 
-<div class="table-responsive-sm"><table>
-   <caption class="caption">Liste des produits finis regroupés par catégories</caption> 
-                <tr>
-            <th>Catégory</th>
-            <th>Products</th>
-        </tr>
-        <tr>
-            <td><span></span>1</td>
-            <td><span></span>Lip Products</td> 
-        </tr>
-        <tr>
-            <td><span></span>2</td>
-            <td><span></span>Deodorants and Antiperspirants</td> 
-        </tr>
-        <tr>
-            <td><span></span>3</td>
-            <td><span></span>Hydroalcoholic products for shaved skin (eau de toilette, perfumes, eye products, facial creams and balms, tampons)</td> 
-        </tr>
-        <tr>
-            <td><span></span>4</td>
-            <td><span></span>Hydroalcoholic products for unshaved skin (eau de toilette, scented paper products, perfumes, hair styling aids, hair sprays, body creams, emulsions, lotions, gels and oils for the skin, foot care products, fragranceing cream)</td> 
-        </tr>
-        <tr>
-            <td><span></span>5</td>
-            <td><span id=""></span>Hand creamss</td> 
-        </tr>
-        <tr>
-            <td><span></span>6</td>
-            <td><span></span>Mouthwash</td> 
-        </tr>
-        <tr>
-            <td><span></span>7</td>
-            <td><span></span>Intimate wipes, baby wipes and insect repellants (to be applied on the skin)</td> 
-        </tr>
-        <tr>
-            <td><span></span>8</td>
-            <td><span></span>Makeup removers, hair styling aids non spray, nail care, powders and talcs</td> 
-        </tr>
-        <tr>
-            <td><span></span>9</td>
-            <td><span></span>Rinse off products (liquid soaps, depilatory, conditioners, shampoos, face cleansers, shaving creams, shower gels, body washes, hygiene pads, other aerosols)</td> 
-        </tr>
-        <tr>
-            <td><span></span>10</td>
-            <td><span></span>Fabric care products (liquid and powder laundry detergents, other household cleaning products, dry cleaning kits, softners, hand dishwashing detergents, hard surface cleaners, shampoos for pets, diapers, toilet seat wipes)</td> 
-        </tr>
-        <tr>
-            <td><span></span>11</td>
-            <td><span></span>Non-skin contact products (air freshners, toilet blocks, insecticides, joss sticks, plastic articles, candles, fuels, paints, floor wax, machine dish-wash products, laundry perfumes, fragrancing sachets, shoe polishers, cat litter, animal sprays, treated textiles products, odoures distilled water for ironing)</td> 
-        </tr>
-</table></div>
-
 <div class="table-responsive-sm"><table class="table">
    <caption class="caption">Liste des produits interdits d'utilisation par l'IFRA</caption> 
         <tr>
@@ -1341,7 +1289,7 @@ crossorigin=""/>
             <td><span></span></td> 
         </tr>
         <tr>
-            <td><span></span>cis-and trans-Asarone ((E)-and(Z)-2,4,5-Trimethoxypropen-1-yl benzene)</td>
+            <td><span></span>cis&#8209;and&nbsp;trans&#8209;Asarone&nbsp;((E)&#8209;and(Z)&#8209;2,4,5&#8209;Trimethoxypropen&#8209;1&#8209;yl&nbsp;benzene)</td>
             <td><span></span>2883&#8209;98&#8209;9 <br> 5273&#8209;86&#8209;9</td>
             <td><span></span>The total level of cis- and trans-asarone resulting from natural presence in essential oils (e.g. calamus oil) should not exceeds 0,01% in the finished product.</td> 
         </tr>
