vertical align in the middle for the tables, and new layout for partner 'cinquième sens'

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1250,7 +1250,7 @@ crossorigin=""/>
    <caption class="caption">Liste des produits interdits d'utilisation par l'IFRA</caption> 
         <tr>
             <th>Ingrédient</th>
-            <th class="width-100-px">N°CAS</th>
+            <th class="">N°CAS</th>
             <th>Spécifications</th>
         </tr>
         <tr>
@@ -1670,7 +1670,7 @@ Limit content of polynuclear aromatic hydrocarbons (PAH) resulting from the use 
 </div>
 
 
-<!-- MODAL cinquième sens -->
+<!-- MODAL Cinquième Sens -->
 
 <div class="modal" tabindex="-1" role="dialog" id="partenaireCinquiemeSens">
 <div class="modal-dialog modal-xl" role="document">
@@ -1682,9 +1682,15 @@ Limit content of polynuclear aromatic hydrocarbons (PAH) resulting from the use 
 </div>
 
 <div class="modal-body text-size-14px text-justify scrollbar-inside">
-	<p class="text-center"><img class="img-fluid  boutonclickable  max-height-200px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></p>
+<div class="container-fluid">
+<div class="row">
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
 	<p>A l’écoute de son temps, au plus près des acteurs, et des passionnés de la belle parfumerie, Cinquième Sens met tout son savoir-faire et son expérience pour vous offrir un lieu innovant, unique et accessible. Soient 80m2 d’espace, au pied de la tour Eiffel, comprenant trois niveaux d’accès en toute flexibilité : Olfawork, Olfaction et Olfalab. </p>
 	<p>Pour en savoir plus sur Cinquième sens et son espace de co-working, rendez-vous sur leur <a href="https://www.cinquiemesens.com/coworking/" target="_BLANK">site</a></p>
+</div>
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-4  order-first order-sm-first order-lg-last"><p class="text-center"><img class="img-fluid  max-height-200px" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens"></p></div>
+</div>
+</div>
 </div>
 
 </div>
