--- a/html/_/index.html
+++ b/html/_/index.html
@@ -729,15 +729,19 @@ crossorigin=""/>
 <div class="modal-content">
   
   <!-- En-tête du modal -->
-<div class="modal-header d-block">
-<div>
-  <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <span id="modaltitle1" class="modal-title font-weight-bold"></span>
-  <span id="modalheader-type1" class="float-right modalheader-type2"></span>
+<div class="modal-header">
+<div class="container-fluid  d-inline-block">
+<div class="row">
+  <div class="col-12 col-md-6  font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
+    <span id="modaltitle1" class="modal-title"></span>
+  </div>
+  <div class="col-12 col-md-6  text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
+    <span id="modalheader-type1" class="modalheader-type2"></span>
+  </div>
+  <div id="modaltitle1-fili" class="col-12  Filiation  text-size-16px text-center"></div>
 </div>
-<div class="text-center">
-  <span id="modaltitle1-fili" class="Filiation"></span>
 </div>
+<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 </div>
 
 <div class="modal-body text-size-14px text-justify scrollbar-inside">
