--- a/html/_/index.html
+++ b/html/_/index.html
@@ -449,10 +449,18 @@ crossorigin=""/>
 <div class="modal-dialog modal-lg" role="document">
 <div class="modal-content">
  
-<div class="modal-header d-block">
-  <button type="button" class="close float-right" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-  <span id="modaltitle2" class="modal-title modal-title1"></span>
-  <span id="modalheader-type2" class="float-right modalheader-type"></span>
+<div class="modal-header">
+<div class="container-fluid  d-inline-block">
+<div class="row">
+  <div class="col-12 col-md-6  font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
+    <span id="modaltitle2" class="modal-title modal-title1"></span>
+  </div>
+  <div class="col-12 col-md-6  text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
+    <span id="modalheader-type2" class="modalheader-type"></span>
+  </div>
+</div>
+</div>
+<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 </div>
 
 <div class="modal-body">
