removed useless mobile version

--- a/html/_/index.html
+++ b/html/_/index.html
@@ -74,20 +74,20 @@ crossorigin=""/>
 <div class="container-fluid">
 <div class="row">
  
-<div class="col-3 col-md-12">
+<div class="col-md-12">
 	<button class="btn mt-4" type="button" data-toggle="modal" data-target="#decouvrirScenTree"><img id="logo-image" class="img-fluid logomenu boutonclickable" src="../img/logob.png" alt="le logo de Scentree"></button>
 </div>
 
 <div class="text-underline font-weight-bold text-size-1-5vw  mt-5 mb-2  col-md-12  d-none d-sm-none d-md-block">Trouver une matière première&nbsp;:&nbsp;</div>
 
-<div class="col-2 offset-5 offset-md-0 col-md-12">
+<div class="col-md-12">
   <!--Recherche -->
   <form class="" action="" autocomplete="off" id="searchForm">
     <input id="searchinput" type="search" class="my-search-bar  form-control" placeholder="Nom (botanique) ou N°CAS..." />
   </form>
 </div>
 
-<div class="col-2 col-md-12 d-none d-md-block  my-footer  pl-0">
+<div class="col-md-12 d-none d-md-block  my-footer  pl-0">
 <div class="container-fluid  text-center">
 <div class="row">
 	<!--<div class="col-12"><button class="btn btn text-underline" type="button" data-toggle="modal" data-target="#lesNouveautes">Découvrez les nouveautés !</button></div>-->
